[gd_scene load_steps=11 format=3 uid="uid://vno8d4sb6h00"]

[ext_resource type="Script" path="res://scenes/characters/character.gd" id="1_taq0m"]
[ext_resource type="PackedScene" uid="uid://yg61w87455ho" path="res://scenes/common/finite_state_machine/FSM.tscn" id="3_dcvdl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ncfb"]
resource_local_to_scene = true
size = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_gwlt8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterAnimation/Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8csog"]
resource_name = "attack"
length = 0.500017
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterAnimation/Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}

[sub_resource type="Animation" id="Animation_g7218"]
resource_name = "idle"
length = 0.500017
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterAnimation/Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_18yy2"]
resource_name = "knockback"
length = 0.500017
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterAnimation/Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_t17j0"]
resource_name = "move"
length = 0.666685
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterAnimation/Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1667, 0.333333, 0.5001),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6yas"]
resource_local_to_scene = true
_data = {
"RESET": SubResource("Animation_gwlt8"),
"attack": SubResource("Animation_8csog"),
"idle": SubResource("Animation_g7218"),
"knockback": SubResource("Animation_18yy2"),
"move": SubResource("Animation_t17j0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_40amy"]
resource_local_to_scene = true
size = Vector2(192, 178)

[node name="CharacterEmptyFSM" type="CharacterBody2D" node_paths=PackedStringArray("attack_sprite") groups=["characters"]]
collision_layer = 2
collision_mask = 17
script = ExtResource("1_taq0m")
attack_sprite = NodePath("CharacterAnimation/Character")

[node name="DanmakuHitbox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DanmakuHitbox"]
shape = SubResource("RectangleShape2D_1ncfb")

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CharacterAnimation" type="Node2D" parent="."]

[node name="Character" type="Sprite2D" parent="CharacterAnimation"]
hframes = 2
vframes = 7
region_rect = Rect2(4, 4, 178, 185)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p6yas")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_40amy")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(96, -1)
target_position = Vector2(40, 0)
collision_mask = 20

[node name="FiniteStateMachine" parent="." instance=ExtResource("3_dcvdl")]
initial_state = NodePath("MoveState")
